Fixed dots alignment issue

--- a/src/scss/components/_quick-link.scss
+++ b/src/scss/components/_quick-link.scss
@@ -11,7 +11,7 @@
 
 .quick-link {
   position: absolute;
-  top: 0;
+  top: 15px;
   right: 0;
   width: 20px;
 
